DB: added reference_id column in complaints table and update necesary
